--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,24 +1,156 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    padding: 0;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
-  color: #7dd3fc;
-  text-decoration: none;
+    color: #7dd3fc;
+    text-decoration: none;
 }
 
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 html {
-  color-scheme: dark;
+    color-scheme: dark;
 }
+
 body {
-  color: #e7e8e8;
-  background: #0f1318;
+    color: #e7e8e8;
+    background: #0f1318;
+}
+
+.drill{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    height: 100vh;
+}
+
+.cube {
+    width: 10px;
+    height: 10px;
+    border: 1px solid black;
+}
+
+/* Define the white dot */
+.cube .dot {
+     width: 3px;
+     height: 3px;
+     background-color: white;
+     border-radius: 50%;
+     position: relative;
+     top: 50%;
+     left: 50%;
+     transform: translate(-50%, -50%);
+     animation: blink 4s linear infinite;
+ }
+
+/* Create the animation for the dot */
+@keyframes blink {
+    50% {
+        opacity: 0;
+    }
+}
+
+
+/* Define the white dot */
+.cube .won {
+    width: 3px;
+    height: 3px;
+    background-color: black;
+    border-radius: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.cube .dead {
+    width: 3px;
+    height: 3px;
+    background-color: red;
+    border-radius: 50%;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.coin {
+    width: 3px;
+    height: 3px;
+    border-radius: 50%;
+    background-color: white;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: flare 2s linear infinite;
+}
+
+@keyframes flare {
+    0% {
+        opacity: 0;
+    }
+    1% {
+        opacity: 0.5;
+    }
+    2% {
+        opacity: 1;
+    }
+    3% {
+        opacity: 0.5;
+    }
+    5% {
+        opacity: 0.2;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.grid {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.modal {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal-content {
+    background-color: white;
+    margin: 15% auto;
+    padding: 20px;
+    width: 80%;
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 7px 20px 0 rgba(0, 0, 0, 0.17);
+}
+
+.close-button {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-button:hover,
+.close-button:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
